--- a/css/styles.css
+++ b/css/styles.css
@@ -12,23 +12,27 @@ h4,
 h5,
 h6,
 p {
-  margin-left: 0;
-  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-ul,
-ol {
+ul {
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
 }
 
+img {
+  display: block;
+}
+
 .container {
   width: 1200px;
-  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  border: 3px solid brown;
+  margin: 0 auto;
+
+  /* outline: 2px solid brown; */
 }
 .list {
   list-style: none;
@@ -54,7 +58,6 @@ body {
 .header {
   padding-top: 24px;
   padding-bottom: 25px;
-  /* background-color: brown; */
 }
 
 .header-container {
@@ -65,6 +68,12 @@ body {
 .navigation {
   display: flex;
   align-items: center;
+}
+
+.box {
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: #ececec;
 }
 
 .logo {
@@ -87,7 +96,7 @@ body {
 }
 
 .menu-item:not(:last-child) {
-  margin-right: 30px;
+  margin-right: 50px;
 }
 
 .menu-link {
@@ -133,11 +142,11 @@ body {
 
 /* -------------------------------HERO---------------------------------- */
 .hero {
+  padding: 200px 0;
   background: #2f303a;
 }
 
 .hero-title {
-  margin-top: 0;
   margin-bottom: 30px;
 
   font-family: var(--main-font);
@@ -186,6 +195,8 @@ body {
 }
 
 .features-subtitle {
+  margin-bottom: 10px;
+
   font-family: var(--main-font);
   font-weight: 700;
   font-size: 14px;
@@ -196,6 +207,9 @@ body {
 }
 
 .features-text {
+  margin-top: 0;
+  margin-bottom: 0;
+
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
@@ -203,7 +217,14 @@ body {
 }
 
 /* -------------------------------Чем мы занимаемся---------------------------------- */
+
+.work {
+  padding-top: 0;
+}
+
 .work-title {
+  margin-bottom: 50px;
+
   font-family: var(--main-font);
   font-weight: 700;
   font-size: 36px;
@@ -211,10 +232,29 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--color-title);
+}
+
+.work-list {
+  display: flex;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.work-item {
+  flex-basis: calc((100% - 90px) / 3);
+  margin-left: 30px;
+  margin-top: 30px;
 }
 
 /* -------------------------------Наша команда---------------------------------- */
+
+.team {
+  background-color: #f5f4fa;
+}
+
 .team-title {
+  margin-bottom: 50px;
+
   font-family: var(--main-font);
   font-weight: 700;
   font-size: 36px;
@@ -224,7 +264,32 @@ body {
   color: var(--color-title);
 }
 
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: calc((100% - 120px) / 4);
+  margin-left: -30px;
+  margin-top: -30px;
+}
+/* justify-content: space-between; */
+
+.team-item {
+  margin-left: 30px;
+  margin-top: 30px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.team-container {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 .team-player {
+  margin-bottom: 10px;
+
   font-family: var(--main-font);
   font-weight: 500;
   font-size: 16px;
@@ -245,9 +310,13 @@ body {
 /* -------------------------------FOOTER---------------------------------- */
 .footer {
   background: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-logo {
+  margin-bottom: 20px;
+
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
@@ -261,6 +330,9 @@ body {
 }
 
 .address-map {
+  margin-top: 20px;
+  margin-bottom: 9px;
+
   font-family: var(--main-font);
   font-style: normal;
   font-size: 14px;
@@ -275,6 +347,10 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+.address-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .address-tel {
@@ -297,6 +373,16 @@ body {
 
 /* -------------------------------filter---------------------------------- */
 
+.filter-menu {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter-item {
+  margin-right: 8px;
+}
+
 .filter-btn {
   background: #f5f4fa;
   font-family: inherit;
@@ -307,6 +393,11 @@ body {
   letter-spacing: 0.03em;
   color: var(--color-title);
   cursor: pointer;
+
+  padding: 6px 22px;
+  border: none;
+  background: #f5f4fa;
+  border-radius: 4px;
 }
 
 .filter-btn.current {
@@ -318,6 +409,10 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: #ffffff;
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .filter-btn:hover,
@@ -326,11 +421,31 @@ body {
   color: #ffffff;
 }
 /* -------------------------------gallery---------------------------------- */
-/* .gallery-img {
-  color: inherit;
-} */
+
+.gallery {
+  display: flex;
+  flex-basis: calc((100% - 30px)) / 3;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.gallery-item {
+  /* flex-basis: calc((100% - 90px) / 3); */
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.img-text-container {
+  padding: 20px 24px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  border-top: none;
+}
 
 .gallery-subtitle {
+  margin-bottom: 4px;
+
   font-family: var(--main-font);
   font-style: normal;
   font-weight: 700;
